fixed chezmoi config template

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,7 +2,7 @@
 {{- $name := promptString "Name" -}}
 {{- $keyID := promptString "KeyID" -}}
 {{- $prettyKeyID := promptString "Pretty KeyID" -}}
-{{- $interface := promptString "Network Interface"}
+{{- $interface := promptString "Network Interface" -}}
 [sourceVCS]
 #	autoCommit  = true
 #	autoPush    = true
